fix: ref main.js via volume in node

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,6 +17,8 @@ services:
       interval: 20s
       timeout: 10s
       retries: 3     
+    volumes:
+      - ./src/main.js:/app/main.js      
 
   nginx:
     build:
